--- a/Курсовой проект/Cinema/Views/Account/Login.cshtml
+++ b/Курсовой проект/Cinema/Views/Account/Login.cshtml
@@ -1,7 +1,55 @@
 ﻿@using Cinema.DataAccess.Entity;
-@model Account
+@model Cinema.Models.LoginViewModel   
 @{
    Layout = null;
 }
+
+<!doctype html>
+<html>
+<head>
+    <meta name="viewport" content="width=device-width" />
+    <title>Вход</title>
+    @await Html.PartialAsync("CssPartial")
+</head>
+<body>
+    <div class="row">
+        <div class="col-md-4"></div>
+        <div class="col-md-4">
+            <h2>Вход на сайт</h2>
+            <hr />
+        </div>
+        <div class="col-md-4"></div>
+        <div class="col-md-4"></div>
+        <div class="col-md-4" aln-center>                                               @*Добавление tag-хелпер (базовый класс - ValidationMessageTagHelper*@
+            <form asp-action="Login">                                                   @*Указываем Имя контроллера/Имя метода*@
+                <div class="form-group">
+                    <label asp-for="UserName">Login (email)</label>                     @*Указываем название поля*@
+                    <input asp-for="UserName" />                                        @*Добавляем полле для ввода текста*@
+                    <span asp-validation-for="UserName" class="text-danger"></span>     @*Атрибут asp-validation-for в качестве значения принимает название свойства модели (поле Класса),для которого будет выводиться сообщение об ошибке валидации.*@
+                </div>
+                <div class="form-group">
+                    <label asp-for="Password">Password</label>
+                    <input asp-for="Password" />
+                    <span asp-validation-for="Password" class="text-danger"></span>
+                </div>
+                <div form-group>
+                    <label asp-for="RememberMe"></label>
+                    <input asp-for="RememberMe" />
+                    <span asp-validation-for="RememberMe"></span>
+                </div>
+                <div class="form-group">
+                    <input type="submit" value="Войти"/>                               @*Добавление кнопки*@
+                </div>
+                <div class="form-group">
+                    <a asp-action="Registration" asp-controller="Account">             @*asp-action: указывает на метод (действие) в контроллере,
+                                                                                         asp-controller: указывает на контроллер, которому предназначен запрос*@
+                        <input type="button" value="Регистрация"/>                     @*Добавление кнопки*@
+                    </a>
+                </div>
+            </form>
+        </div>
+    </div>
+</body>
+</html>
 
 
