--- a/Курсовой проект/Cinema/Views/Shared/_Layout.cshtml.css
+++ b/Курсовой проект/Cinema/Views/Shared/_Layout.cshtml.css
@@ -41,16 +41,19 @@ button.accept-policy {
 }
 
 .footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  white-space: nowrap;
-  line-height: 60px;
-  background-color: aquamarine
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    white-space: nowrap;
+    line-height: 60px;
+    background-color: #f5f5f7;
+    color: aliceblue
 }
 footer {
     background-color: aliceblue;
 }
+
+
 
 
 
