--- a/Курсовой проект/Cinema/Views/Home/Help.cshtml
+++ b/Курсовой проект/Cinema/Views/Home/Help.cshtml
@@ -17,94 +17,38 @@
    </div>
    <ul class="section root quest-list box">
     <li>
-        <a>
-            <svg>
-                <use href="/static/img/2023/icons/icons.svg#help-circle"></use>
-            </svg>
-            <span>Вопросы по отзывам и объектам отзывов</span>
-        </a>
+            <a asp-area="" asp-controller="Home" asp-action="HelpDetails">Вопросы по отзывам и объектам отзывов</a>
     </li>
     <li>
-        <a>
-            <svg>
-                <use href="/static/img/2023/icons/icons.svg#help-circle"></use>
-            </svg>
-            <span>Вопросы по реферальной программе</span>
-        </a>
+            <a asp-area="" asp-controller="Home" asp-action="HelpDetails">Вопросы по реферальной программе</a>
     </li>
     <li>
-        <a>
-            <svg>
-                <use href="/static/img/2023/icons/icons.svg#help-circle"></use>
-            </svg>
-            <span>Вопросы по финансовой теме (заработок, выплаты, баланс, личный коэффициент и т.д.)</span>
-        </a>
+            <a asp-area="" asp-controller="Home" asp-action="HelpDetails">Вопросы по финансовой теме (заработок, выплаты, баланс, личный коэффициент и т.д.)</a>
     </li>
     <li>
-        <a>
-            <svg>
-                <use href="/static/img/2023/icons/icons.svg#help-circle"></use>
-            </svg>
-            <span>Вопросы по своим личным данным (email, ЮMoney-кошелек, репутация и т.п.)</span>
-        </a>
+            <a asp-area="" asp-controller="Home" asp-action="HelpDetails">Вопросы по своим личным данным (email, ЮMoney-кошелек, репутация и т.п.)</a>
     </li>
     <li>
-        <a>
-            <svg>
-                <use href="/static/img/2023/icons/icons.svg#help-circle"></use>
-            </svg>
-            <span>Как стать модератором и правильно модерировать отзывы?</span>
-        </a>
+            <a asp-area="" asp-controller="Home" asp-action="HelpDetails">Как стать модератором и правильно модерировать отзывы?</a>
     </li>
     <li>
-        <a>
-            <svg>
-                <use href="/static/img/2023/icons/icons.svg#help-circle"></use>
-            </svg>
-            <span>Как стать модератором и правильно модерировать отзывы?</span>
-        </a>
+             <a asp-area="" asp-controller="Home" asp-action="HelpDetails">Как стать модератором и правильно модерировать отзывы?</a>
     </li>
     <li>
-        <a>
-            <svg>
-                <use href="/static/img/2023/icons/icons.svg#help-circle"></use>
-            </svg>
-            <span>Я требую удалить отзыв, который отрицательно влияет на деловую репутацию моей фирмы.</span>
-        </a>
+             <a asp-area="" asp-controller="Home" asp-action="HelpDetails">Я требую удалить отзыв, который отрицательно влияет на деловую репутацию моей фирмы.</a>
     </li>
     <li>
-        <a>
-            <svg>
-                <use href="/static/img/2023/icons/icons.svg#help-circle"></use>
-            </svg>
-            <span>Как запретить копирование моих отзывов с Отзовика?</span>
-        </a>
+             <a asp-area="" asp-controller="Home" asp-action="HelpDetails">Как запретить копирование моих отзывов с Отзовика?</a>
     </li>
     <li>
-        <a>
-            <svg>
-                <use href="/static/img/2023/icons/icons.svg#help-circle"></use>
-            </svg>
-            <span>Официальным представителям компаний и организаций</span>
-        </a>
+             <a asp-area="" asp-controller="Home" asp-action="HelpDetails">Официальным представителям компаний и организаций</a>
     </li>
     <li>
-        <a>
-            <svg>
-                <use href="/static/img/2023/icons/icons.svg#help-circle"></use>
-            </svg>
-            <span>Вопросы по отзывам и объектам отзывов</span>
-        </a>
+             <a asp-area="" asp-controller="Home" asp-action="HelpDetails">Вопросы по отзывам и объектам отзывов</a>
     </li>
     <li>
-        <a>
-            <svg>
-                <use href="/static/img/2023/icons/icons.svg#help-circle"></use>
-            </svg>
-            <span>Вопросы по работе сайта</span>
-        </a>
+             <a asp-area="" asp-controller="Home" asp-action="HelpDetails">Вопросы по работе сайта</a>
     </li>
-
   </ul>
 </div>
 
