--- a/Курсовой проект/Cinema/Views/Home/Privacy.cshtml
+++ b/Курсовой проект/Cinema/Views/Home/Privacy.cshtml
@@ -27,7 +27,7 @@
             </div>
             <div>
                 <div class="product-reviews decor-u2n">
-                    <a href="/reviews/film_astral_5_krasnaya_dver_2023/" class="reviews-counter"> 8 отзывов</a>
+                    <a href="~/Comment/FeedbackDetails/" class="reviews-counter"> 8 отзывов</a>
                 </div>
                 <div class="product-rating tooltip-right" title="Общий рейтинг: 6">
                     <span class="icons icon-star-1"></span>
@@ -50,7 +50,7 @@
             </div>
             <div>
                 <div class="product-reviews decor-u2n">
-                    <a href="/reviews/film_astral_5_krasnaya_dver_2023/" class="reviews-counter"> 6 отзывов</a>
+                    <a href="~/Comment/FeedbackDetails/" class="reviews-counter"> 6 отзывов</a>
                 </div>
                 <div class="product-rating tooltip-right" title="Общий рейтинг: 5.43">
                     <span class="icons icon-star-1"></span>
@@ -73,7 +73,7 @@
             </div>
             <div>
                 <div class="product-reviews decor-u2n">
-                    <a href="/reviews/film_shpion_2023/" class="reviews-counter"> 10 отзывов</a>
+                    <a href="~/Comment/FeedbackDetails/" class="reviews-counter"> 10 отзывов</a>
                 </div>
                 <div class="product-rating tooltip-right" title="Общий рейтинг: 3.91">
                     <span class="icons icon-star-1"></span>
@@ -96,7 +96,7 @@
             </div>
             <div>
                 <div class="product-reviews decor-u2n">
-                    <a href="/reviews/film_astral_5_krasnaya_dver_2023/" class="reviews-counter"> 31 отзыв</a>
+                    <a href="~/Comment/FeedbackDetails/" class="reviews-counter"> 31 отзыв</a>
                 </div>
                 <div class="product-rating tooltip-right" title="Общий рейтинг: 4.52">
                     <span class="icons icon-star-1"></span>
@@ -119,7 +119,7 @@
             </div>
             <div>
                 <div class="product-reviews decor-u2n">
-                    <a href="/reviews/serial_tyani_sunduk_2022/" class="reviews-counter"> 12 отзывов</a>
+                    <a href="~/Comment/FeedbackDetails/" class="reviews-counter"> 12 отзывов</a>
                 </div>
                 <div class="product-rating tooltip-right" title="Общий рейтинг: 4">
                     <span class="icons icon-star-1"></span>
@@ -142,7 +142,7 @@
             </div>
             <div>
                 <div class="product-reviews decor-u2n">
-                    <a href="/reviews/film_vremya_rasplati_2023/" class="reviews-counter"> 21 отзыв</a>
+                    <a href="~/Comment/FeedbackDetails/" class="reviews-counter"> 21 отзыв</a>
                 </div>
                 <div class="product-rating tooltip-right" title="Общий рейтинг: 2.29">
                     <span class="icons icon-star-1"></span>
@@ -165,7 +165,7 @@
             </div>
             <div>
                 <div class="product-reviews decor-u2n">
-                    <a href="/reviews/film_on-eto_pulya_2023/" class="reviews-counter"> 15 отзывов</a>
+                    <a href="~/Comment/FeedbackDetails/" class="reviews-counter"> 15 отзывов</a>
                 </div>
                 <div class="product-rating tooltip-right" title="Общий рейтинг: 6">
                     <span class="icons icon-star-1"></span>
@@ -188,7 +188,7 @@
             </div>
             <div>
                 <div class="product-reviews decor-u2n">
-                    <a href="/reviews/film_mikulay_2022/" class="reviews-counter"> 8 отзывов</a>
+                    <a href="~/Comment/FeedbackDetails/" class="reviews-counter"> 8 отзывов</a>
                 </div>
                 <div class="product-rating tooltip-right" title="Общий рейтинг: 6">
                     <span class="icons icon-star-1"></span>
@@ -211,7 +211,7 @@
             </div>
             <div>
                 <div class="product-reviews decor-u2n">
-                    <a href="/reviews/film_astral_5_krasnaya_dver_2023/" class="reviews-counter"> 8 отзывов</a>
+                    <a href="~/Comment/FeedbackDetails/" class="reviews-counter"> 8 отзывов</a>
                 </div>
                 <div class="product-rating tooltip-right" title="Общий рейтинг: 6">
                     <span class="icons icon-star-1"></span>
@@ -234,7 +234,7 @@
             </div>
             <div>
                 <div class="product-reviews decor-u2n">
-                    <a href="/reviews/film_astral_5_krasnaya_dver_2023/" class="reviews-counter"> 8 отзывов</a>
+                    <a href="~/Comment/FeedbackDetails/" class="reviews-counter"> 8 отзывов</a>
                 </div>
                 <div class="product-rating tooltip-right" title="Общий рейтинг: 6">
                     <span class="icons icon-star-1"></span>
@@ -257,7 +257,7 @@
             </div>
             <div>
                 <div class="product-reviews decor-u2n">
-                    <a href="/reviews/film_astral_5_krasnaya_dver_2023/" class="reviews-counter"> 8 отзывов</a>
+                    <a href="~/Comment/FeedbackDetails/" class="reviews-counter"> 8 отзывов</a>
                 </div>
                 <div class="product-rating tooltip-right" title="Общий рейтинг: 6">
                     <span class="icons icon-star-1"></span>
@@ -280,7 +280,7 @@
             </div>
             <div>
                 <div class="product-reviews decor-u2n">
-                    <a href="/reviews/film_astral_5_krasnaya_dver_2023/" class="reviews-counter"> 8 отзывов</a>
+                    <a href="~/Comment/FeedbackDetails/" class="reviews-counter"> 8 отзывов</a>
                 </div>
                 <div class="product-rating tooltip-right" title="Общий рейтинг: 6">
                     <span class="icons icon-star-1"></span>
@@ -303,7 +303,7 @@
             </div>
             <div>
                 <div class="product-reviews decor-u2n">
-                    <a href="/reviews/film_astral_5_krasnaya_dver_2023/" class="reviews-counter"> 8 отзывов</a>
+                    <a href="~/Comment/FeedbackDetails/" class="reviews-counter"> 8 отзывов</a>
                 </div>
                 <div class="product-rating tooltip-right" title="Общий рейтинг: 6">
                     <span class="icons icon-star-1"></span>
@@ -326,7 +326,7 @@
             </div>
             <div>
                 <div class="product-reviews decor-u2n">
-                    <a href="/reviews/film_on-eto_pulya_2023/" class="reviews-counter"> 13 отзывов</a>
+                    <a href="~/Comment/FeedbackDetails/" class="reviews-counter"> 13 отзывов</a>
                 </div>
                 <div class="product-rating tooltip-right" title="Общий рейтинг: 4.77">
                     <span class="icons icon-star-1"></span>
